# c-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
backend/: CMakeLists.txt
backend/include/backend/: backend.h
backend/src/llvm/: llvm-gen.c  llvm-gen.h
common/: CMakeLists.txt
common/include/: target.h
common/src/: target.c  vectors.c
common/tst/: hashtable-tests.c  test-main.c
docs/: c99.bnf  ir.md
ir/: CMakeLists.txt
ir/include/ir/: arch.h  cfg.h  ir-builder.h  ir.h
ir/src/: arch.c  fmt.c  ir-builder.c  ir.c  ssa.c
ir/tst/: cfg-tests.c  ir-tests.c  test-main.c
src/: ast.c  ast.h  builtins.c  builtins.h  codegen.c  codegen.h  errors.c  errors.h  lexer.c  lexer.h  main.c  numeric-constants.c  parser.c  parser.h  preprocessor.c  preprocessor.h  target.c  target.h  types.c  types.h
src/ir/: arch.c  arch.h  cfg.c  cfg.h  fmt.c  fmt.h  ir-builder.c  ir-builder.h  ir-gen.c  ir-gen.h  ir.c  ir.h  ssa.c  ssa.h
src/ir/codegen/: codegen.c  codegen.h  declarations.c  expressions.c  initializers.c  internal.c  internal.h  statements.c
src/llvm/: llvm-gen.c  llvm-gen.h
src/parser/: lexer.c  lexer.h  numeric-constants.c  numeric-constants.h  parser.c  parser.h  preprocessor.c  preprocessor.h
src/util/: ast-printer.c  ast-printer.h  hashtable.c  hashtable.h  read-lines.c  read-lines.h  strings.c  strings.h  vectors.c  vectors.h
tst/: lexer-tests.c  numeric-constants-tests.c  parser-tests.c  preprocessor-tests.c  test-common.c  test-common.h  test-main.c  tests.h  types-test.c
tst/ir/: cfg-tests.c  ir-gen-tests.c
tst/test-input/include/: a.c  b.h  c.c
tst/util/: hashtable-tests.c  read-lines-test.c
utils/: CMakeLists.txt
utils/include/utils/: hashtable.h  vectors.h
utils/src/: hashtable.c
utils/tst/: hashtable-tests.c
validation/: README.md  harness.py
validation/004-control-flow-if-else/: main.c
validation/005-function-call-varargs/: main.c
validation/007-function-call-recursive-fibonacci/: main.c
validation/arithmetic/001-integer-addition/: main.c  stdout.expected
validation/arithmetic/002-integer-subtraction/: main.c  stdout.expected
validation/arithmetic/003-integer-multiplication/: main.c  stdout.expected
validation/arithmetic/004-integer-division/: main.c  stdout.expected
validation/arithmetic/005-integer-increment-decrement/: main.c  stdout.expected
validation/arithmetic/006-floating-point-addition/: main.c  stdout.expected
validation/arithmetic/007-floating-point-subtraction/: main.c  stdout.expected
validation/arithmetic/008-floating-point-multiplication/: main.c  stdout.expected
validation/arithmetic/009-floating-point-division/: main.c  stdout.expected
validation/arithmetic/010-floating-point-increment-decrement/: main.c  stdout.expected
validation/arrays/001-array-store-load/: main.c  stdout.expected
validation/arrays/002-addr-of-array-element/: main.c
validation/arrays/003-multidimensional-arrays/: main.c
validation/arrays/004-array-initializers/: main.c  stdout.expected
validation/arrays/005-array-to-pointer-decay/: main.c
validation/bitwise/001-bitwise-and/: main.c  stdout.expected
validation/bitwise/002-bitwise-or/: main.c  stdout.expected
validation/bitwise/003-bitwise-xor/: main.c
validation/bitwise/004-bitwise-shl/: main.c  stdout.expected
validation/bitwise/005-bitwise-shr/: main.c  stdout.expected
validation/bitwise/006-bitwise-not/: main.c  main.ll  stdout.expected
validation/control-flow/001-control-flow-if/: main.c
validation/control-flow/001-control-flow-implicit-return/: main.c
validation/control-flow/003-control-flow-if-else/: main.c
validation/control-flow/004-control-flow-while/: main.c
validation/control-flow/005-control-flow-for/: main.c  stdout.expected
validation/control-flow/006-control-flow-do-while/: main.c
validation/control-flow/007-control-flow-goto/: main.c
validation/control-flow/008-control-flow-break/: main.c
validation/control-flow/009-control-flow-continue/: main.c
validation/control-flow/010-control-flow-switch/: main.c  stdout.expected
validation/demos/001-quicksort/: main.c  stdout.expected
validation/demos/002-xor-swap/: main.c  stdout.expected
validation/demos/003-factorization/: main.c
validation/demos/004-duffs-device/: main.c
validation/enums/001-enum-specifiers/: main.c  stdout.expected
validation/enums/002-global-enum-specifiers/: main.c
validation/function-calls/001-function-call-void-args/: main.c
validation/function-calls/002-function-call-int-args/: main.c
validation/function-calls/003-function-call-arg-promotion/: main.c  stdout.expected
validation/function-calls/005-function-call-recursive-fibonacci/: main.c
validation/function-calls/006-function-forward-declaration/: main.c
validation/globals/001-global-variables/: main.c  stdout.expected
validation/globals/002-global-array-initializer-list/: main.c  stdout.expected
validation/globals/003-global-struct-initializer-list/: main.c  stdout.expected
validation/globals/004-reference-in-global-initializer/: main.c
validation/harness/003-output-stdout/: main.c
validation/logical/001-logical-and/: main.c
validation/logical/002-logical-and-short-circuiting/: main.c  stdout.expected
validation/logical/003-logical-or/: main.c
validation/logical/004-logical-or-short-circuiting/: main.c  stdout.expected
validation/logical/005-logical-not/: main.c
validation/pointers/001-address-of-and-indirection/: main.c
validation/pointers/002-dereferencing-and-incrementing/: main.c
validation/pointers/003-initializing/: main.c
validation/sanity/: should-fail.c  should-succeed.c
validation/simple/: test-implicit-return-int.c
validation/sizeof/001-sizeof-primitive/: main.c
validation/sizeof/002-sizeof-pointer/: main.c
validation/sizeof/003-sizeof-struct/: main.c
validation/sizeof/004-sizeof-union/: main.c
validation/sizeof/005-sizeof-expression/: main.c
validation/structs-and-unions/001-structs/: main.c
validation/structs-and-unions/002-struct-pointers/: main.c  stdout.expected
(+23 files in other folders)
